tests/errors/other/test_tc_other_04_missing_return.pc
#import std.io;
int add(int a, int b) {
    a + b;
}
int main() {
    int result = add(1, 2);
    io.println_int(result);
    return 0;
}
